<resources>
    <string name="app_name">Grockit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="signup">SIGN UP</string>
    <string name="LOGIN">LOGIN</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="donthaveaccoutn">Don\'t have account?</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="alreadyhaveacc">Already have an account?</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="user">User</string>
    <string name="title">Sabzi Bala</string>
    <string name="title_des">Get Fresh Vegitables</string>
    <string name="veg_title">Brinjal</string>
    <string name="veg_price">100 RS/KG</string>
    <string name="Vegitables">Vegetables</string>
    <string name="frutes">Fruits</string>
    <string name="milk">Milk</string>
    <string name="yourorder">Your Order:</string>
    <string name="next">Next</string>
    <string name="negative">-</string>
    <string name="positive">+</string>
    <string name="number">1</string>
    <string name="total_items">Total Items:</string>
    <string name="Delevery_charges">Dilevery Charges:</string>
    <string name="grand_total">Grand Total:</string>
    <string name="pay">Pay</string>
    <string name="number2">0</string>
    <string name="mark">Landmark</string>
    <string name="houseno">House no. / Gali no.</string>
    <string name="cod">Cash on delivery (cod)</string>
    <string name="pay_online">Pay Online</string>
    <string name="proceed">Proceed</string>
    <string name="groccery">Grocery Items</string>
    <string name="payment">Payment Method</string>
    <string name="delevery_status">Delevery status</string>
    <string name="total_price">Total price</string>
    <string name="share">Share now</string>
    <string name="log_out">Log out</string>
    <string name="contact">Contact us</string>
    <string name="rating">Rate us</string>
    <string name="about">About us</string>
    <string name="terms"><![CDATA[Terms & Condition]]></string>
    <string name="privacy"><![CDATA[Privacy & Policy]]></string>
    <string name="refund">Refund Policy</string>
</resources>